--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,13 +157,15 @@ if (SLS_USE_RECEIVER)
     add_subdirectory(manual/manual-api)    
 endif (SLS_USE_RECEIVER)
 
-if (SLS_USE_GUI)   
-    find_package(Qt4 REQUIRED)
+#if (SLS_USE_GUI)   
+    find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
     find_package(Qwt 6 REQUIRED)
-    if (QT4_FOUND AND QWT_FOUND)
+    if (QT5_FOUND AND QWT_FOUND)
         add_subdirectory(slsDetectorGui)
+    else()
+        message(FATAL_ERROR "No QT")
     endif()
-endif (SLS_USE_GUI)
+#endif (SLS_USE_GUI)
 
 if (SLS_USE_SIMULATOR)
     add_subdirectory(slsDetectorServers)
