--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,12 +158,20 @@ if (SLS_USE_RECEIVER)
 endif (SLS_USE_RECEIVER)
 
 #if (SLS_USE_GUI)   
-    find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
+    find_package(Qt5Widgets 5.9.2 REQUIRED)
+    find_package(Qt5Gui 5.9.2 REQUIRED)
+    find_package(Qt5Core 5.9.2 REQUIRED)
+    find_package(Qt5OpenGL 5.9.2 REQUIRED)
+    find_package(Qt5Svg 5.9.2 REQUIRED)
+    find_package(Qt5Concurrent 5.9.2 REQUIRED)
+#    find_package(Qt5 COMPONENTS Widgets Gui Core OpenGL Svg Concurrent REQUIRED)
     find_package(Qwt 6 REQUIRED)
-    if (QT5_FOUND AND QWT_FOUND)
-        add_subdirectory(slsDetectorGui)
-    else()
+    if (Qt5Widgets_VERSION VERSION_LESS 5.0 OR NOT QWT_FOUND)
         message(FATAL_ERROR "No QT")
+    else()
+        message("-- Found Qt (even though QT5_Found not set): ${Qt5Widgets_VERSION}")
+        message("-- Qt Include Dirs: ${Qt5Widgets_INCLUDE_DIRS}")
+        add_subdirectory(slsDetectorGui)
     endif()
 #endif (SLS_USE_GUI)
 
